--- a/src/routes/newHome.html
+++ b/src/routes/newHome.html
@@ -14,9 +14,19 @@
   <body>
     <header>
       <div id="particles"></div>
+      <div class="nav-bar">
+        <img src="../img/logo.png" alt="Logo" class="logo-nav-bar" />
+        <div>Profile</div>
+        <div>Employment</div>
+        <div>Resources</div>
+        <div>Career</div>
+        <div>About Us</div>
+      </div>
+      <div class="log-in-button">Log In / Sign Up</div>
       <div class="info-text">
+        <img src="../img/logo.png" />
         <h1>New Beginnings</h1>
-        <h3>Welcome to PooPooLand Rutgers Enactus New Beginnings Web</h3>
+        <h3>A Rutgers Enactus Initiative</h3>
         <a href="#about" class="scroll"><i class="bx bxs-down-arrow"></i></a>
       </div>
     </header>
